--- a/matcher/templates/navbar.html
+++ b/matcher/templates/navbar.html
@@ -44,17 +44,17 @@
             <a class="nav-link" href="{{ url_for('account_page') }}">{{ g.user.username }}</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="{{ url_for('account_settings_page') }}">settings</a>
+            <a class="nav-link" href="{{ url_for('account_settings_page') }}">Settings</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="{{ url_for('logout', next=request.script_root + request.full_path.rstrip('?')) }}">logout</a>
+            <a class="nav-link" href="{{ url_for('logout', next=request.script_root + request.full_path.rstrip('?')) }}">Logout</a>
           </li>
         {% else %}
           <li class="nav-item">
             {% set login_url = url_for('login_route', next=request.script_root + request.full_path.rstrip('?'))
                                if request.endpoint != 'social.complete'
                                else url_for('login_route') %}
-            <a class="nav-link" href="{{ login_url }}">login with OSM</a>
+            <a class="nav-link" href="{{ login_url }}">Login with OSM</a>
           </li>
         {% endif %}
     </ul>
