--- a/matcher/templates/show_error.html
+++ b/matcher/templates/show_error.html
@@ -5,29 +5,22 @@
 {% endblock %}
 
 {% block content %}
+<div class="p-2">
 
 <div class="container my-2">
 <div class="row">
 <div class="col">
 
-<h1>Software error: {{ tb.exception_type }}</h1>
+<h1>Software error: {{ exception_type }}</h1>
 <div>
-  <pre>{{ tb.exception }}</pre>
+  <pre>{{ exception }}</pre>
 </div>
 
-{% set body %}
-URL: {{ request.url }}
-
-{{ tb.plaintext | safe }}
-{% endset %}
-
-<p><a class="btn btn-primary btn-lg" role="button" href="https://github.com/EdwardBetts/osm-wikidata/issues/new?title={{ tb.exception | urlencode }}&body={{ body | urlencode }}">Submit as an issue on GitHub</a> (requires an account with GitHub)</p>
-
 <h2 class="traceback">Traceback <em>(most recent call last)</em></h2>
-{{ tb.render_summary(include_title=False) | safe }}
+{{ summary | safe }}
 
-<p>Error in function "{{ tb.frames[-1].function_name }}": {{ last_frame_args | pprint }}</p>
-<pre>{{ last_frame.locals | pprint }}</pre>
+<p>Error in function "{{ last_frame.f_code.co_name }}": {{ last_frame_args | pprint }}</p>
+<pre>{{ last_frame.f_locals | pprint }}</pre>
 
 </div>
 </div>
